--- a/.vscode/sass/layout/_header.scss
+++ b/.vscode/sass/layout/_header.scss
@@ -152,16 +152,7 @@
     display: none;
   }
 }
-.menu-socseti__icon-line {
-  height: 20px;
-  width: 5px;
-  fill: black;
-}
 
-.menu-socseti {
-  display: flex;
-  margin: -10px;
-}
 .mob-menu {
   z-index: 1;
   position: fixed;
@@ -191,6 +182,7 @@
 .menu-top .menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
+
 .menu-bottom .menu__item:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -201,8 +193,8 @@
 }
 .menu-bottom {
   margin-bottom: 64px;
-  // margin-top: auto;
 }
+
 .menu-top .menu__link {
   font-weight: 500;
   font-size: 40px;
@@ -211,6 +203,7 @@
   letter-spacing: 0.02em;
   color: inherit;
 }
+
 .menu__link--tel {
   font-weight: 500;
   font-size: 34px;
@@ -220,6 +213,7 @@
 
   color: #2196f3;
 }
+
 .menu__link--mail {
   font-weight: 500;
   font-size: 24px;
@@ -228,19 +222,30 @@
 
   color: #757575;
 }
-.menu-socseti__link {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
 
-  color: #2196f3;
-}
-.menu-socseti__item {
-  margin-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  & + & {
-    border-left: 1px solid rgba(33, 33, 33, 0.2);
+.menu-socseti {
+  display: flex;
+  margin: -10px;
+
+  &__icon-line {
+    height: 20px;
+    width: 5px;
+    fill: black;
+  }
+  &__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+
+    color: #2196f3;
+  }
+  &__item {
+    margin-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    & + & {
+      border-left: 1px solid rgba(33, 33, 33, 0.2);
+    }
   }
 }
