--- a/.vscode/sass/layout/_hero.scss
+++ b/.vscode/sass/layout/_hero.scss
@@ -17,16 +17,16 @@
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(/images/hero-img-mob-2x.jpg);
+      url(/images/hero-img-mob-2x.JPG);
   }
 
   @include tab {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero-img-tab-1x.jpg);
+      url(../images/hero-img-tab-1x.JPG);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/images/hero-img-tab-2x.jpg);
+        url(/images/hero-img-tab-2x.JPG);
     }
   }
 
