--- a/.vscode/sass/layout/_hero.scss
+++ b/.vscode/sass/layout/_hero.scss
@@ -17,7 +17,7 @@
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(/images/hero-img-mob-2x.JPG);
+      url(../images/hero-img-mob-2x.JPG);
   }
 
   @include tab {
@@ -26,7 +26,7 @@
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/images/hero-img-tab-2x.JPG);
+        url(../images/hero-img-tab-2x.JPG);
     }
   }
 
@@ -39,7 +39,7 @@
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(/images/hero-img-desk-2x.jpg);
+        url(../images/hero-img-desk-2x.jpg);
     }
   }
 
