--- a/.vscode/sass/components/_container.scss
+++ b/.vscode/sass/components/_container.scss
@@ -6,6 +6,15 @@
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  @include tel {
+    width: 480px;
+  }
+  @include tab {
+    width: 768px;
+  }
+  @include desk {
+    width: 1200px;
+  }
 }
 .container-mob-menu {
   height: 100%;
