--- a/.vscode/sass/layout/_hero.scss
+++ b/.vscode/sass/layout/_hero.scss
@@ -3,7 +3,7 @@
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero-img-mob-1x.jpg);
   background-repeat: no-repeat;
-  background-position: center;
+  // background-position: center;
   background-size: cover;
 
   max-width: 1600px;
